styles.css
body {
      color: #d1d9d8;
     }

#card {
       width: 40%;
       margin: 5% 30%;
       background-color:#4b7670;
       box-sizing: border-box;
       border: 2px solid hidden;
       border-radius: 40px;
       padding: 2px;
       box-shadow: 3px 3px 2px 3px black;
      }

#card img {
           box-sixing: border-box;
           margin-left: 20%; 
           margin-top: 10px;
           margin-bottom: 20px;
           border: 1px solid black;
           box-shadow: 3px 3px 5px 2px black;
          }

#card h3 {
          margin: 20px;
         }

#fun-fact {
           font-style: italic;
           margin: auto;
          }
.content {
          width: 90%;
          margin: auto;
          margin-bottom: 5px;
          box-sizing: border-box;
          background-color: #5b6160;
          border: 1px solid black;
          border-radius: 10px;
          padding: 5px;
          font-family: Courier, serif;
          text-align: left;
         }

.content ul {
             list-style-type: none;
             margin: 10px;
            }

span {
      font-family: Arial,sans;
      font-weight: bold;
     }

